tests/baselines/reference/parserModuleDeclaration10.errors.txt
parserModuleDeclaration10.ts(1,10): error TS2391: Function implementation is missing or not immediately following the declaration.
parserModuleDeclaration10.ts(2,10): error TS2391: Function implementation is missing or not immediately following the declaration.


==== parserModuleDeclaration10.ts (2 errors) ====
    function data(): string;
             ~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    function next(): string;
             ~~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    